[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Interface/LevelSelector.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="LevelSelector" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
alignment = 1

[node name="GameTitle" type="Label" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "Trap Ball"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 1040.0
margin_bottom = 180.0
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer1"]
margin_left = 321.0
margin_right = 447.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Level 1"

[node name="Button2" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer1"]
margin_left = 451.0
margin_right = 583.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Level 2"

[node name="Button3" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer1"]
margin_left = 587.0
margin_right = 719.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Level 3"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 1040.0
margin_bottom = 256.0
alignment = 1

[node name="Button4" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 315.0
margin_right = 450.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Level 4"

[node name="Button5" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 454.0
margin_right = 586.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Level 5"

[node name="Button6" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 590.0
margin_right = 724.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Level 6"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 286.0
margin_right = 1040.0
margin_bottom = 332.0
alignment = 1

[node name="PrevWorldButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 211.0
margin_right = 487.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Previous World"

[node name="WorldSelectedLabel" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 491.0
margin_top = 3.0
margin_right = 618.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "World 1"

[node name="NextWorldButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 622.0
margin_right = 829.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Next World"
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer1/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer1/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer1/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer3/PrevWorldButton" to="." method="_on_PrevWorldButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer3/NextWorldButton" to="." method="_on_NextWorldButton_pressed"]
